# checkpaint

./: README.md  build.sh  checkIfWorks.py  checkpaint.code-workspace  end_run_data.pth  launchGL.py  notes.sh  removedCode.h  run.sh  testForCXX11.sh
template/: ._pyproject.toml  CMakeLists.txt  pyproject.toml
template/src/: CheckpointProcessor.h  Chex.cpp  Chex.h  ChexAfterModelBatch.h  ChexBeforeIndividualKeyFreqz.h  GPTConfig.h  OldTransformer.h  ccc.cpp  helperz.h  neuralBase.h
template/src/checkpaint/: HookedTransformerLite.py  OriginalTransformer.py  __init__.py  c_hooks.py  gui.py  guiNew.py  gui_pygfx.py  line_plot.py  line_plot_pygfx.py  metric.py  nanda.py  utils.py
tests/: Dockerfile  cimporter.py  cpptest.cpp  dockercimporter.py  makeSO.py  pyTest.sh  runDocker.sh  testPy.sh  testWheels.sh
